--- a/src/adventOfCode-awieckert.csproj
+++ b/src/adventOfCode-awieckert.csproj
@@ -6,4 +6,10 @@
     <RootNamespace>adventOfCode_awieckert</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Update="dataQuestion1.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
