--- a/src/adventOfCode-awieckert.csproj
+++ b/src/adventOfCode-awieckert.csproj
@@ -2,12 +2,15 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <RootNamespace>adventOfCode_awieckert</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
-    <None Update="dataQuestion1.txt">
+    <None Update="Question1bData.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Question1Data.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
